--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "vue-command-palette": "^0.2.3",
     "vue-cropper": "^1.1.4",
     "vue-router": "^4.5.1",
-    "vue3-data-dict": "^1.0.1"
+    "vue3-data-dict": "^1.0.1",
+    "vxe-pc-ui": "~4.8.19",
+    "vxe-table": "~4.15.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -61,6 +63,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/qs": "^6.14.0",
     "@types/sortablejs": "^1.15.8",
+    "@unocss/preset-wind3": "^66.5.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
@@ -75,6 +78,7 @@
     "prettier": "3.6.2",
     "sass": "^1.89.2",
     "typescript": "~5.8.0",
+    "unocss": "^66.5.0",
     "vite": "^7.0.6",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^8.0.0",
