--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,8 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
-    "eslint.config.*"
+    "eslint.config.*",
+    "uno.config.*"
   ],
   "compilerOptions": {
     "noEmit": true,
