--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-pattern .gitignore --cache",
     "format": "prettier --write src/",
     "lint-staged": "lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "generate:version": "generate-version-file dist public"
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.6",
@@ -49,6 +50,7 @@
     "tinymce": "^7.9.1",
     "tree-lodash": "^0.4.0",
     "ts-md5": "^2.0.1",
+    "version-rocket": "^1.7.4",
     "vue": "^3.5.18",
     "vue-command-palette": "^0.2.3",
     "vue-cropper": "^1.1.4",
